--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Features
+h3. Features
  *Basic Twitter Features
  *Support LDAP authentication
  *Support Gravatar
@@ -6,15 +6,15 @@ Features
  *Simultaneous writing on Twitter
  *Default language is English
 
-Before You Begin
+h3. Before You Begin
  *Install Ruby, RubyGems?, Rails 3, and a database like MySQL
 
-Installation
+h3. Installation
  *Download the source from "Source" tab.
  *Set your configuration file at config/config.yml (see config/config.default.yml for an example)
  *Set your database configuration file at config/database.yml (see config/database.default.yml for an example)
  *Run "rake db:create" and "rake db:migrate".
  *That's it. Now, Run rails and connect from your web browser.
 
-Special thanks to
+h3. Special thanks to
  *Special thanks to Ryan Bates. His blog is so helpful.
